tests/ui/asm/hexagon/bad-reg.stderr
warning: unstable feature specified for `-Ctarget-feature`: `hvx-length128b`
   |
   = note: this feature is not stably supported; its behavior can change in the future

error: invalid register `r19`: r19 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:20:18
   |
LL |         asm!("", out("r19") _);
   |                  ^^^^^^^^^^^^

error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:22:18
   |
LL |         asm!("", out("sp") _);
   |                  ^^^^^^^^^^^

error: invalid register `r29`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:24:18
   |
LL |         asm!("", out("r29") _);
   |                  ^^^^^^^^^^^^

error: invalid register `r30`: the frame register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:26:18
   |
LL |         asm!("", out("r30") _);
   |                  ^^^^^^^^^^^^

error: invalid register `fr`: the frame register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:28:18
   |
LL |         asm!("", out("fr") _);
   |                  ^^^^^^^^^^^

error: invalid register `r31`: the link register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:30:18
   |
LL |         asm!("", out("r31") _);
   |                  ^^^^^^^^^^^^

error: invalid register `lr`: the link register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:32:18
   |
LL |         asm!("", out("lr") _);
   |                  ^^^^^^^^^^^

error: invalid register `r19:18`: r19 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:36:18
   |
LL |         asm!("", out("r19:18") _);
   |                  ^^^^^^^^^^^^^^^

error: invalid register `r29:28`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:38:18
   |
LL |         asm!("", out("r29:28") _);
   |                  ^^^^^^^^^^^^^^^

error: invalid register `r31:30`: the frame register and link register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:40:18
   |
LL |         asm!("", out("r31:30") _);
   |                  ^^^^^^^^^^^^^^^

error: register class `preg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:45:18
   |
LL |         asm!("", in("p0") x);
   |                  ^^^^^^^^^^

error: register class `preg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:48:18
   |
LL |         asm!("", out("p0") x);
   |                  ^^^^^^^^^^^

error: register class `qreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:54:18
   |
LL |         asm!("", in("q0") x);
   |                  ^^^^^^^^^^

error: register class `qreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:57:18
   |
LL |         asm!("", out("q0") x);
   |                  ^^^^^^^^^^^

error: register `r1:0` conflicts with register `r0`
  --> $DIR/bad-reg.rs:84:31
   |
LL |         asm!("", out("r0") _, out("r1:0") _);
   |                  -----------  ^^^^^^^^^^^^^ register `r1:0`
   |                  |
   |                  register `r0`

error: register `r1:0` conflicts with register `r1`
  --> $DIR/bad-reg.rs:86:31
   |
LL |         asm!("", out("r1") _, out("r1:0") _);
   |                  -----------  ^^^^^^^^^^^^^ register `r1:0`
   |                  |
   |                  register `r1`

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:45:27
   |
LL |         asm!("", in("p0") x);
   |                           ^
   |
   = note: register class `preg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:48:28
   |
LL |         asm!("", out("p0") x);
   |                            ^
   |
   = note: register class `preg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:54:27
   |
LL |         asm!("", in("q0") x);
   |                           ^
   |
   = note: register class `qreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:57:28
   |
LL |         asm!("", out("q0") x);
   |                            ^
   |
   = note: register class `qreg` supports these types: 

error: type `i64` cannot be used with this register class
  --> $DIR/bad-reg.rs:62:34
   |
LL |         asm!("/* {} */", in(reg) y);
   |                                  ^
   |
   = note: register class `reg` supports these types: i8, i16, i32, f32

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:66:39
   |
LL |         asm!("/* {} */", in(reg_pair) x);
   |                                       ^
   |
   = note: register class `reg_pair` supports these types: i64, f64

error: aborting due to 22 previous errors; 1 warning emitted

